Update composer for repo name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "league/oauth2-linkedin",
+    "name": "uxmz/oauth2-linkedin",
     "description": "LinkedIn OAuth 2.0 Client Provider for The PHP League OAuth2-Client",
     "license": "MIT",
     "authors": [
